--- a/less/01-base.less
+++ b/less/01-base.less
@@ -13,6 +13,77 @@ IMPORTS
 @import "bootstrap.less";
 
 /* 
+LOGIN
+=============================================================
+*/
+#login {
+	background: url('../images/fondo-login.jpg') left top no-repeat;
+	background-size: cover;
+}
+
+.login-container {
+	position: fixed;
+	top: 0;
+	right: 0;
+	width: 50%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.4);
+
+	&.recuperar {
+		right: inherit;
+		left: 0;
+	}
+
+	p {
+		color: @blanco;
+		font-size: 1.2rem;
+	}
+
+	a:link, a:visited {
+		color: @blanco;
+
+		&:hover, &:active {
+			color: @gris-20;
+		}
+	}
+
+/*************** Tres ***************/
+	form {
+		margin: auto;
+		width: 44%;
+
+		input {
+			margin-bottom: 20px;
+			padding: 15px 30px;
+			width: 100%;
+			border: 0;
+			color: @azul;
+			.placeholder(@gris-50);
+		}
+
+		button {
+			margin-bottom: 20px;
+			width: 100%;
+		}
+
+		.error {
+			clear: both;
+
+			svg {
+				float: left;
+				margin-left: 20px;
+				margin-right: 24px;
+			}
+		}
+	}
+}
+
+.logo {
+	margin-top: 13%;
+	margin-bottom: 32%;
+	text-align: center;
+}
+/* 
 HEADER
 =============================================================
 */
