--- a/less/html.less
+++ b/less/html.less
@@ -6,6 +6,7 @@ body {
 	-webkit-font-smoothing: antialiased; /* Fix for webkit rendering */
 	-webkit-text-size-adjust: 100%;
 	color: @gris-100;
+	.open;
 }
     
 img {
