--- a/css/gimav.css
+++ b/css/gimav.css
@@ -95,15 +95,15 @@ COLORES
 *********************/
 ::selection {
   color: #ffffff;
-  background-color: #000000;
+  background-color: #80b801;
 }
 ::-moz-selection {
   color: #ffffff;
-  background-color: #000000;
+  background-color: #80b801;
 }
 ::-webkit-selection {
   color: #ffffff;
-  background-color: #000000;
+  background-color: #80b801;
 }
 /* 
 TIPOGRAFIA
@@ -122,10 +122,11 @@ BOTONES
 .boton {
   display: inline-block;
   margin: 10px 0;
-  padding: 10px;
+  padding: 14px;
   background: #000000;
   color: #ffffff;
   font-weight: 600;
+  font-size: 1.4rem;
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
@@ -196,6 +197,58 @@ BOTONES
 .boton.verde:active,
 .boton.verde:focus {
   color: #012549;
+}
+.boton.azul {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  position: relative;
+  background: #2098d1;
+  -webkit-transition-property: color;
+  transition-property: color;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  color: #ffffff;
+  background: #104b85;
+}
+.boton.azul:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #e1e1e1;
+  -webkit-transform: scale(1);
+  transform: scale(1);
+  -webkit-transition-property: transform;
+  transition-property: transform;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+}
+.boton.azul:hover,
+.boton.azul:focus,
+.boton.azul:active {
+  color: white;
+}
+.boton.azul:hover:before,
+.boton.azul:focus:before,
+.boton.azul:active:before {
+  -webkit-transform: scale(0);
+  transform: scale(0);
+}
+.boton.azul:before {
+  background: #012549;
+}
+.boton.azul:hover,
+.boton.azul:active,
+.boton.azul:focus {
+  color: #ffffff;
 }
 .icono-facebook {
   background: #1860aa;
@@ -5837,6 +5890,10 @@ LOGIN
   background: url('../images/fondo-login.jpg') left top no-repeat;
   background-size: cover;
 }
+#recuperar {
+  background: url('../images/fondo-recuperar.jpg') left top no-repeat;
+  background-size: cover;
+}
 .login-container {
   position: fixed;
   top: 0;
@@ -5850,9 +5907,44 @@ LOGIN
   right: inherit;
   left: 0;
 }
+.login-container.recuperar .logo {
+  margin-bottom: 10%;
+}
+.login-container.recuperar form {
+  margin-top: 20px;
+}
+.login-container h1 {
+  margin-top: 0;
+  margin-bottom: 10%;
+  font-size: 2.3rem;
+  font-weight: 400;
+  color: #ffffff;
+  text-align: center;
+}
 .login-container p {
   color: #ffffff;
   font-size: 1.2rem;
+}
+.login-container .instrucciones {
+  margin-bottom: 20px;
+  font-size: 1.4rem;
+}
+.login-container .texto-confirmacion {
+  margin: auto;
+  width: 44%;
+  text-align: center;
+}
+.login-container .texto-confirmacion p {
+  font-size: 1.4rem;
+  margin-bottom: 20px;
+}
+.login-container .texto-confirmacion button {
+  margin-top: 20px;
+}
+.login-container button {
+  display: block;
+  margin-bottom: 20px;
+  width: 100%;
 }
 .login-container a:link,
 .login-container a:visited {
@@ -5887,9 +5979,8 @@ LOGIN
 .login-container form input :-ms-input-placeholder {
   color: #808080;
 }
-.login-container form button {
-  margin-bottom: 20px;
-  width: 100%;
+.login-container form input.error {
+  color: #83200d;
 }
 .login-container form .error {
   clear: both;
