--- a/less/01-base.less
+++ b/less/01-base.less
@@ -21,6 +21,11 @@ LOGIN
 	background-size: cover;
 }
 
+#recuperar {
+	background: url('../images/fondo-recuperar.jpg') left top no-repeat;
+	background-size: cover;
+}
+
 .login-container {
 	position: fixed;
 	top: 0;
@@ -32,11 +37,53 @@ LOGIN
 	&.recuperar {
 		right: inherit;
 		left: 0;
+
+		.logo {
+			margin-bottom: 10%;
+		}
+
+		form {
+			margin-top: 20px;
+		}
+	}
+
+	h1 {
+		margin-top: 0;
+		margin-bottom: 10%;
+		font-size: 2.3rem;
+		font-weight: 400;
+		color: @blanco;
+		text-align: center;
 	}
 
 	p {
 		color: @blanco;
 		font-size: 1.2rem;
+	}
+
+	.instrucciones {
+		margin-bottom: 20px;
+		font-size: 1.4rem;
+	}
+
+	.texto-confirmacion {
+		margin: auto;
+		width: 44%;
+		text-align: center;
+
+		p {
+			font-size: 1.4rem;
+			margin-bottom: 20px;
+		}
+
+		button {
+			margin-top: 20px;}
+	}
+
+	button {
+		display: block;
+		margin-bottom: 20px;
+		width: 100%;
 	}
 
 	a:link, a:visited {
@@ -59,11 +106,10 @@ LOGIN
 			border: 0;
 			color: @azul;
 			.placeholder(@gris-50);
-		}
 
-		button {
-			margin-bottom: 20px;
-			width: 100%;
+			&.error {
+				color: @rojo;
+			}
 		}
 
 		.error {
