--- a/less/tema.less
+++ b/less/tema.less
@@ -35,8 +35,9 @@ COLORES
 @verde: #80b801;
 @verde-light: #b0e439;
 
-@azul: #012549;
+@azul: #023262;
 @azul-light: #104b85;
+@azul-dark: #012549;
 
 // Redes sociales
 @facebook: #1860aa;
