--- a/less/04-tablet-portrait.less
+++ b/less/04-tablet-portrait.less
@@ -40,25 +40,26 @@ TABS
 /*********************
 HEADER
 *********************/
-header {
-	.navbar-default {
-		.navbar-nav {
-			display: table;
-			width: 100%;
+// header {
+// 	.navbar-default {
+// 		.navbar-nav {
+// 			display: table;
+// 			width: 100%;
 				
-			li {
-				display: table-cell;
-				// Cambiar al porcentaje necesario
-				width: 20%;
-				text-align: center;
+// 			li {
+// 				display: table-cell;
+// 				// Cambiar al porcentaje necesario
+// 				margin-right: 80px;
+// 				width: auto;
+// 				text-align: center;
 
-				a:link, a:visited {
-					padding-left: 0;
-					padding-right: 0;
-				}
-			}
-		}
-	}
-}
+// 				a:link, a:visited {
+// 					padding-left: 0;
+// 					padding-right: 0;
+// 				}
+// 			}
+// 		}
+// 	}
+// }
 
 }
