--- a/less/01-base.less
+++ b/less/01-base.less
@@ -137,6 +137,7 @@ header {
 	// position: fixed;
 	width: 100%;
 	z-index: 20;
+	margin-bottom: 40px;
 
 	.container-fluid {
 		padding: 0 40px;
@@ -295,7 +296,38 @@ USUARIO
 		display: table-cell;
 		vertical-align: middle;
 	}
-	
+}
+
+.cuenta-datos {
+	margin: auto;
+	margin-top: 20px;
+	width: 550px;
+
+	p {
+		margin: 20px 0;
+		padding: 14px 20px;
+		color: @gris-50;
+	}
+
+	figure {
+		padding: 20px 0;
+		text-align: left;
+	}
+
+	.boton {
+		margin: 0 20px;
+		margin-top: 20px;
+		width: 100%;
+	}
+}
+
+.eqtiqueta {
+	text-align: right;
+}
+
+.dato {
+	text-align: left;
+	border-bottom: 1px solid @gris-20;
 }
 /* 
 UNO
