--- a/less/html.less
+++ b/less/html.less
@@ -27,6 +27,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
+	margin-top: 0;
+	color: @gris-50;
+	font-size: 1.8rem; 
 }
 
 h2 {
@@ -56,6 +59,7 @@ article {
 }
 
 p {
+	font-size: 1.6rem;
 }
 
 b {
