--- a/less/mixins.less
+++ b/less/mixins.less
@@ -294,7 +294,7 @@ FORMULARIOS
 	@titulo-color: @gris-80;
 	@archivo-color: @gris-60;
 
-	@sel-fondo: @negro;
+	@sel-fondo: @gris-10;
 	@sel-texto: @blanco;
 	@sel-texto-hover: @gris-80;
 	
