--- a/css/gimav.css
+++ b/css/gimav.css
@@ -251,6 +251,110 @@ BOTONES
 .boton.azul:focus {
   color: #ffffff;
 }
+.boton.azul-claro {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  position: relative;
+  background: #2098d1;
+  -webkit-transition-property: color;
+  transition-property: color;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  color: #ffffff;
+  background: #023262;
+}
+.boton.azul-claro:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #e1e1e1;
+  -webkit-transform: scale(1);
+  transform: scale(1);
+  -webkit-transition-property: transform;
+  transition-property: transform;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+}
+.boton.azul-claro:hover,
+.boton.azul-claro:focus,
+.boton.azul-claro:active {
+  color: white;
+}
+.boton.azul-claro:hover:before,
+.boton.azul-claro:focus:before,
+.boton.azul-claro:active:before {
+  -webkit-transform: scale(0);
+  transform: scale(0);
+}
+.boton.azul-claro:before {
+  background: #0259a9;
+}
+.boton.azul-claro:hover,
+.boton.azul-claro:active,
+.boton.azul-claro:focus {
+  color: #ffffff;
+}
+.boton.rojo {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  position: relative;
+  background: #2098d1;
+  -webkit-transition-property: color;
+  transition-property: color;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  color: #ffffff;
+  background: #b52d15;
+}
+.boton.rojo:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #e1e1e1;
+  -webkit-transform: scale(1);
+  transform: scale(1);
+  -webkit-transition-property: transform;
+  transition-property: transform;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+}
+.boton.rojo:hover,
+.boton.rojo:focus,
+.boton.rojo:active {
+  color: white;
+}
+.boton.rojo:hover:before,
+.boton.rojo:focus:before,
+.boton.rojo:active:before {
+  -webkit-transform: scale(0);
+  transform: scale(0);
+}
+.boton.rojo:before {
+  background: #83200d;
+}
+.boton.rojo:hover,
+.boton.rojo:active,
+.boton.rojo:focus {
+  color: #ffffff;
+}
 .boton.blanco {
   display: inline-block;
   vertical-align: middle;
@@ -5680,7 +5784,7 @@ ul li a:visited {
   padding: 0.625rem 1.25rem;
   height: 100%;
   color: #ffffff;
-  background-color: #000000;
+  background-color: #e9e9e9;
   display: inline-block;
   -webkit-transition: background 0.3s ease-out;
   -moz-transition: background 0.3s ease-out;
@@ -6292,12 +6396,68 @@ USUARIO
   margin-top: 20px;
   width: 100%;
 }
+.cuenta-datos input {
+  margin: 20px 0;
+  padding: 14px 20px;
+  width: 100%;
+  background: #e9e9e9;
+  color: #808080;
+  border: 0;
+}
+.botones-cont {
+  margin: auto;
+  width: 760px;
+}
+.botones-cont .boton {
+  width: 330px;
+}
+.botones-cont .boton:first-child {
+  margin-right: 60px;
+}
 .eqtiqueta {
   text-align: right;
 }
 .dato {
   text-align: left;
   border-bottom: 1px solid #d1d1d3;
+}
+.subir-imagen {
+  display: table;
+}
+.subir-imagen figure,
+.subir-imagen .upload-file,
+.subir-imagen .formato {
+  display: table-cell;
+}
+.subir-imagen .upload-file .inputfile + label {
+  padding: 20px 5px;
+  margin-bottom: 0;
+  width: 230px;
+  background: #e9e9e9;
+  color: #808080;
+  font-weight: 400;
+  vertical-align: middle;
+  -webkit-transition: background 0.3s ease-out;
+  -moz-transition: background 0.3s ease-out;
+  -o-transition: background 0.3s ease-out;
+  transition: background 0.3s ease-out;
+}
+.subir-imagen .upload-file .inputfile + label:hover {
+  background: #d1d1d3;
+  -webkit-transition: background 0.3s ease-out;
+  -moz-transition: background 0.3s ease-out;
+  -o-transition: background 0.3s ease-out;
+  transition: background 0.3s ease-out;
+}
+.subir-imagen .upload-file .inputfile + label .archivo-subido {
+  display: none;
+}
+.subir-imagen .formato {
+  padding-left: 10px;
+  color: #808080;
+}
+.subir-imagen .archivo-subido {
+  display: none;
 }
 /* 
 UNO
