Maqueta y estilos de administración y modales de administración

--- a/less/01-base.less
+++ b/less/01-base.less
@@ -328,6 +328,8 @@ USUARIO
 		color: @gris-50;
 		border: 0;
 	}
+
+	.placeholder(@gris-40);
 }
 
 .botones-cont {
@@ -388,6 +390,29 @@ USUARIO
 		display: none;
 	}
 }
+
+.alerta {
+	clear: both;
+	text-align: center;
+
+	svg {
+		position: relative;
+		top: 8px;
+		display: inline-block;
+		margin-right: 12px;
+	}
+
+	p {
+		display: inline-block;
+		color: @rojo;
+	}
+}
+
+.confirmacion {
+	margin: 40px 0;
+}
+
+
 /* 
 UNO
 =============================================================
