--- a/css/gimav.css
+++ b/css/gimav.css
@@ -408,6 +408,73 @@ BOTONES
 .boton.blanco:focus {
   color: #ffffff;
 }
+.boton.gris {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  position: relative;
+  background: #2098d1;
+  -webkit-transition-property: color;
+  transition-property: color;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  padding: 10px 20px;
+  color: #808080;
+  background: #d1d1d3;
+  font-size: 1.3rem;
+  border: 1px solid #d1d1d3;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -o-border-radius: 8px;
+  border-radius: 8px;
+  behavior: url(PIE.htc);
+}
+.boton.gris:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #e1e1e1;
+  -webkit-transform: scale(1);
+  transform: scale(1);
+  -webkit-transition-property: transform;
+  transition-property: transform;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+}
+.boton.gris:hover,
+.boton.gris:focus,
+.boton.gris:active {
+  color: white;
+}
+.boton.gris:hover:before,
+.boton.gris:focus:before,
+.boton.gris:active:before {
+  -webkit-transform: scale(0);
+  transform: scale(0);
+}
+.boton.gris:before {
+  background: #ffffff;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -o-border-radius: 8px;
+  border-radius: 8px;
+  behavior: url(PIE.htc);
+}
+.boton.gris:hover,
+.boton.gris:active,
+.boton.gris:focus {
+  color: #333333;
+}
 .icono-facebook {
   background: #1860aa;
 }
@@ -5670,6 +5737,64 @@ ul li a:visited {
   background-size: 8px;
 }
 /******* Tablas ******/
+table {
+  width: 100%;
+}
+table thead tr th {
+  padding: 10px;
+  color: #808080;
+  font-weight: 600;
+  text-align: center;
+  border-right: 0;
+  border-left: 0;
+}
+table tbody tr td {
+  padding: 10px;
+  color: #808080;
+  border: 1px solid #e9e9e9;
+  border-right: 0;
+  border-left: 0;
+}
+table tbody tr td.admin-nombre {
+  color: #0259a9;
+}
+table tbody tr:last-child td {
+  border-bottom: 0;
+}
+.table-cont {
+  margin: 40px 10px 20px 10px;
+  border: 1px solid #d1d1d3;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  -ms-border-radius: 6px;
+  -o-border-radius: 6px;
+  border-radius: 6px;
+  behavior: url(PIE.htc);
+}
+.borrar-admin {
+  cursor: pointer;
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+}
+.borrar-admin:hover,
+.borrar-admin:focus,
+.borrar-admin:active {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+}
+.borrar-admin svg {
+  fill: #c1282d;
+}
+.borrar-admin:hover svg {
+  fill: #e75b5f;
+}
 .table-striped > tbody > tr:nth-child(odd) > td {
   background: ;
   color: ;
@@ -5989,22 +6114,46 @@ MODALES
 *********************/
 .modal-content {
   border: ;
-  -webkit-border-radius: 6px;
-  -moz-border-radius: 6px;
-  -ms-border-radius: 6px;
-  -o-border-radius: 6px;
-  border-radius: 6px;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -o-border-radius: 8px;
+  border-radius: 8px;
   behavior: url(PIE.htc);
 }
 .modal-header {
   border-bottom: 0;
   background: ;
+  -webkit-border-top-right-radius: 8px;
+  -webkit-border-top-left-radius: 8px;
+  -moz-border-radius-topright: 8px;
+  -moz-border-radius-topleft: 8px;
+  border-top-right-radius: 8px;
+  border-top-left-radius: 8px;
+}
+.modal-header .modal-title {
+  color: #ffffff;
+  font-size: 1.6rem;
+  text-align: center;
 }
 .modal-header .close {
   opacity: 1;
 }
+.modal-header.azul-claro {
+  background: #0259a9;
+}
+.modal-header.rojo {
+  background: #83200d;
+}
+.modal-body p {
+  text-align: center;
+  color: #808080;
+}
 .modal-footer {
-  border-top: 0;
+  border-top: 1px solid #e9e9e9;
+}
+.modal-backdrop.in {
+  opacity: .8;
 }
 /*********************
 TABS
@@ -6404,6 +6553,18 @@ USUARIO
   color: #808080;
   border: 0;
 }
+.cuenta-datos :-moz-placeholder {
+  color: #a8a8a8;
+}
+.cuenta-datos ::-moz-placeholder {
+  color: #a8a8a8;
+}
+.cuenta-datos ::-webkit-input-placeholder {
+  color: #a8a8a8;
+}
+.cuenta-datos :-ms-input-placeholder {
+  color: #a8a8a8;
+}
 .botones-cont {
   margin: auto;
   width: 760px;
@@ -6458,6 +6619,23 @@ USUARIO
 }
 .subir-imagen .archivo-subido {
   display: none;
+}
+.alerta {
+  clear: both;
+  text-align: center;
+}
+.alerta svg {
+  position: relative;
+  top: 8px;
+  display: inline-block;
+  margin-right: 12px;
+}
+.alerta p {
+  display: inline-block;
+  color: #83200d;
+}
+.confirmacion {
+  margin: 40px 0;
 }
 /* 
 UNO
