--- a/less/html.less
+++ b/less/html.less
@@ -291,9 +291,18 @@ dl {
 }
 /******* Tablas ******/
 table {
+	width: 100%;
+
 	thead {
 		tr {
-			th{
+			th {
+				padding: 10px;
+				color: @gris-50;
+				font-weight: 600;
+				text-align: center;
+				// border: 1px solid @gris-10;
+				border-right: 0;
+				border-left: 0;
 			}
 		}
 	}
@@ -301,6 +310,21 @@ table {
 	tbody {
 		tr {
 			td {
+				padding: 10px;
+				color: @gris-50;
+				border: 1px solid @gris-10;
+				border-right: 0;
+				border-left: 0;
+
+				&.admin-nombre {
+					color: @azul-light;
+				}
+			}
+
+			&:last-child {
+				td {
+					border-bottom: 0;
+				}
 			}
 		}
 	}
@@ -318,6 +342,40 @@ table {
 	caption {
 	}
 }
+
+.table-cont {
+	margin: 40px 10px 20px 10px; 
+	border: 1px solid @gris-20;
+	.border-radius();
+}
+
+.borrar-admin {
+	cursor: pointer;
+	.grow;
+
+	svg {
+		fill: #c1282d;
+	}
+
+	&:hover {
+		svg {
+			fill: #e75b5f;
+		}
+	}
+
+}
+
+// #administradores {
+// 	table {
+// 		td:first-child, th:first-child {
+// 			padding-left: 150px;
+// 		}
+
+// 		td:last-child, th:last-child {
+// 			padding-right: 150px;
+// 		}
+// 	}
+// }
 
 // Stripped
 .table-striped > tbody > tr:nth-child(odd) > td {
