--- a/css/gimav.css
+++ b/css/gimav.css
@@ -5750,16 +5750,35 @@ table thead tr th {
 }
 table tbody tr td {
   padding: 10px;
+  background: transparent;
   color: #808080;
   border: 1px solid #e9e9e9;
   border-right: 0;
   border-left: 0;
+  -webkit-transition: background 0.3s ease-out;
+  -moz-transition: background 0.3s ease-out;
+  -o-transition: background 0.3s ease-out;
+  transition: background 0.3s ease-out;
 }
-table tbody tr td.admin-nombre {
+table tbody tr td.realce {
   color: #0259a9;
 }
 table tbody tr:last-child td {
   border-bottom: 0;
+}
+table tbody tr:hover {
+  background: #f6f6f6;
+  -webkit-transition: background 0.3s ease-out;
+  -moz-transition: background 0.3s ease-out;
+  -o-transition: background 0.3s ease-out;
+  transition: background 0.3s ease-out;
+}
+.ancho-justo td {
+  width: 16.6666666%;
+}
+.nums td {
+  font-size: 1.8rem;
+  font-weight: 600;
 }
 .table-cont {
   margin: 40px 10px 20px 10px;
@@ -6197,6 +6216,133 @@ TABS
   color: ;
 }
 /*************** Contenido ***************/
+/*********************
+DATEPICKER
+*********************/
+.datepicker {
+  top: 0;
+  left: 0;
+  padding: 4px;
+  margin-top: 1px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+  border-radius: 4px;
+  behavior: url(PIE.htc);
+  /*.dow {
+		border-top: 1px solid #ddd !important;
+	}*/
+}
+.datepicker:before {
+  content: '';
+  display: inline-block;
+  border-left: 7px solid transparent;
+  border-right: 7px solid transparent;
+  border-bottom: 7px solid #ccc;
+  border-bottom-color: rgba(0, 0, 0, 0.2);
+  position: absolute;
+  top: -7px;
+  left: 6px;
+}
+.datepicker:after {
+  content: '';
+  display: inline-block;
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-bottom: 6px solid #ffffff;
+  position: absolute;
+  top: -6px;
+  left: 7px;
+}
+.datepicker > div {
+  display: none;
+}
+.datepicker table {
+  width: 100%;
+  margin: 0;
+}
+.datepicker table tbody tr td {
+  border: 0;
+}
+.datepicker table tbody tr:hover {
+  background: transparent;
+}
+.datepicker td,
+.datepicker th {
+  text-align: center;
+  width: 20px;
+  height: 20px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+  border-radius: 4px;
+  behavior: url(PIE.htc);
+}
+.datepicker td.day:hover {
+  background: #e9e9e9;
+  cursor: pointer;
+}
+.datepicker td.day.disabled {
+  color: #808080;
+}
+.datepicker td.old,
+.datepicker td.new {
+  color: #bdbdbd;
+}
+.datepicker td.active,
+.datepicker td.active:hover {
+  background: #023262;
+  color: #fff;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+}
+.datepicker td span {
+  display: block;
+  width: 47px;
+  height: 54px;
+  line-height: 54px;
+  float: left;
+  margin: 2px;
+  cursor: pointer;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+  border-radius: 4px;
+  behavior: url(PIE.htc);
+}
+.datepicker td span:hover {
+  background: #e9e9e9;
+}
+.datepicker td span.active {
+  background: #023262;
+  color: #fff;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+}
+.datepicker td span.old {
+  color: #bdbdbd;
+}
+.datepicker th.switch {
+  width: 145px;
+}
+.datepicker th.next,
+.datepicker th.prev {
+  font-size: 1.3rem;
+}
+.datepicker thead tr:first-child th {
+  cursor: pointer;
+}
+.datepicker thead tr:first-child th:hover {
+  color: #0259a9;
+}
+.input-append.date .add-on i,
+.input-prepend.date .add-on i {
+  display: block;
+  cursor: pointer;
+  width: 16px;
+  height: 16px;
+}
 /* 
 LOGIN
 =============================================================
@@ -6636,6 +6782,68 @@ USUARIO
 }
 .confirmacion {
   margin: 40px 0;
+}
+.form-bloque {
+  padding: 20px 20px;
+  min-height: 138px;
+  border-right: 1px solid #e9e9e9;
+}
+.form-bloque .form-group {
+  display: table;
+  position: relative;
+  width: 100%;
+}
+.form-bloque label {
+  width: 85px;
+  color: #808080;
+  font-weight: 400;
+  text-align: right;
+  display: table-cell;
+}
+.form-bloque input {
+  padding: 6px;
+  width: 88%;
+  color: #808080;
+  border: 1px solid #e9e9e9;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  -ms-border-radius: 6px;
+  -o-border-radius: 6px;
+  border-radius: 6px;
+  behavior: url(PIE.htc);
+  display: table-cell;
+}
+.form-bloque select {
+  height: 34px;
+  width: 88%;
+  background: #ffffff;
+  color: #808080;
+  border: 1px solid #e9e9e9;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  -ms-border-radius: 6px;
+  -o-border-radius: 6px;
+  border-radius: 6px;
+  behavior: url(PIE.htc);
+  display: table-cell;
+}
+.form-bloque span {
+  position: absolute;
+  right: 4%;
+  height: 34px;
+  padding: 0 8px;
+  padding-top: 5px;
+  background: #c8c8c8;
+  -webkit-border-bottom-right-radius: 6px;
+  -webkit-border-top-right-radius: 6px;
+  -moz-border-radius-bottomright: 6px;
+  -moz-border-radius-topright: 6px;
+  border-bottom-right-radius: 6px;
+  border-top-right-radius: 6px;
+  pointer-events: none;
+}
+.form-bloque svg {
+  fill: #ffffff;
 }
 /* 
 UNO
